--- a/bsp/stm32/stm32u535-st-nucleo/.config
+++ b/bsp/stm32/stm32u535-st-nucleo/.config
@@ -133,32 +133,7 @@ CONFIG_RT_USING_DFS_V1=y
 # CONFIG_RT_USING_DFS_V2 is not set
 CONFIG_DFS_FILESYSTEMS_MAX=4
 CONFIG_DFS_FILESYSTEM_TYPES_MAX=4
-CONFIG_RT_USING_DFS_ELMFAT=y
-
-#
-# elm-chan's FatFs, Generic FAT Filesystem Module
-#
-CONFIG_RT_DFS_ELM_CODE_PAGE=437
-CONFIG_RT_DFS_ELM_WORD_ACCESS=y
-# CONFIG_RT_DFS_ELM_USE_LFN_0 is not set
-# CONFIG_RT_DFS_ELM_USE_LFN_1 is not set
-# CONFIG_RT_DFS_ELM_USE_LFN_2 is not set
-CONFIG_RT_DFS_ELM_USE_LFN_3=y
-CONFIG_RT_DFS_ELM_USE_LFN=3
-CONFIG_RT_DFS_ELM_LFN_UNICODE_0=y
-# CONFIG_RT_DFS_ELM_LFN_UNICODE_1 is not set
-# CONFIG_RT_DFS_ELM_LFN_UNICODE_2 is not set
-# CONFIG_RT_DFS_ELM_LFN_UNICODE_3 is not set
-CONFIG_RT_DFS_ELM_LFN_UNICODE=0
-CONFIG_RT_DFS_ELM_MAX_LFN=255
-CONFIG_RT_DFS_ELM_DRIVES=2
-CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=4096
-# CONFIG_RT_DFS_ELM_USE_ERASE is not set
-CONFIG_RT_DFS_ELM_REENTRANT=y
-CONFIG_RT_DFS_ELM_MUTEX_TIMEOUT=3000
-# CONFIG_RT_DFS_ELM_USE_EXFAT is not set
-# end of elm-chan's FatFs, Generic FAT Filesystem Module
-
+# CONFIG_RT_USING_DFS_ELMFAT is not set
 CONFIG_RT_USING_DFS_DEVFS=y
 # CONFIG_RT_USING_DFS_ROMFS is not set
 # CONFIG_RT_USING_DFS_CROMFS is not set
@@ -205,8 +180,7 @@ CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_PULSE_ENCODER is not set
 # CONFIG_RT_USING_INPUT_CAPTURE is not set
 CONFIG_RT_USING_MTD_NOR=y
-CONFIG_RT_USING_MTD_NAND=y
-# CONFIG_RT_MTD_NAND_DEBUG is not set
+# CONFIG_RT_USING_MTD_NAND is not set
 CONFIG_RT_USING_PM=y
 CONFIG_PM_TICKLESS_THRESHOLD_TIME=2
 # CONFIG_PM_USING_CUSTOM_CONFIG is not set
@@ -711,7 +685,28 @@ CONFIG_PKG_RT_VSNPRINTF_FULL_VER="latest"
 # CONFIG_PKG_USING_SQLITE is not set
 # CONFIG_PKG_USING_RTI is not set
 # CONFIG_PKG_USING_DFS_YAFFS is not set
-# CONFIG_PKG_USING_LITTLEFS is not set
+CONFIG_PKG_USING_LITTLEFS=y
+CONFIG_PKG_LITTLEFS_PATH="/packages/system/littlefs"
+# CONFIG_PKG_USING_LITTLEFS_V090 is not set
+# CONFIG_PKG_USING_LITTLEFS_V170 is not set
+# CONFIG_PKG_USING_LITTLEFS_V172 is not set
+# CONFIG_PKG_USING_LITTLEFS_V201 is not set
+# CONFIG_PKG_USING_LITTLEFS_V205 is not set
+# CONFIG_PKG_USING_LITTLEFS_V214 is not set
+# CONFIG_PKG_USING_LITTLEFS_V220 is not set
+# CONFIG_PKG_USING_LITTLEFS_V221 is not set
+# CONFIG_PKG_USING_LITTLEFS_V230 is not set
+# CONFIG_PKG_USING_LITTLEFS_V250 is not set
+CONFIG_PKG_USING_LITTLEFS_LATEST_VERSION=y
+CONFIG_LFS_READ_SIZE=2048
+CONFIG_LFS_PROG_SIZE=2048
+CONFIG_LFS_BLOCK_SIZE=4096
+CONFIG_LFS_CACHE_SIZE=2048
+CONFIG_LFS_BLOCK_CYCLES=100
+# CONFIG_DFS_LFS_READONLY is not set
+CONFIG_LFS_THREADSAFE=y
+CONFIG_LFS_LOOKAHEAD_MAX=8
+CONFIG_PKG_LITTLEFS_VER="latest"
 # CONFIG_PKG_USING_DFS_JFFS2 is not set
 # CONFIG_PKG_USING_DFS_UFFS is not set
 # CONFIG_PKG_USING_LWEXT4 is not set
@@ -1301,7 +1296,7 @@ CONFIG_BOARD_SERIES_STM32_NUCLEO_64=y
 # CONFIG_SOC_STM32U545RE is not set
 CONFIG_SOC_STM32U535VE=y
 CONFIG_BOARD_STM32U535_NUCLEO=y
-CONFIG_BSP_USING_NAND_FLASH=y
+# CONFIG_BSP_USING_NAND_FLASH is not set
 # end of Onboard Peripheral Drivers
 
 #
@@ -1343,6 +1338,6 @@ CONFIG_BSP_USING_ON_CHIP_FLASH=y
 #
 # Board extended module Drivers
 #
-CONFIG_BSP_USING_DHARA=y
+# CONFIG_BSP_USING_DHARA is not set
 # end of Board extended module Drivers
 # end of Hardware Drivers Config
