--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "fal_cfg.h": "c",
         "dhara_blk_device.h": "c",
         "board.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "*.tcc": "c"
     }
 }
