--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -2,7 +2,7 @@
 #
 # RT-Thread Kernel
 #
-CONFIG_RT_NAME_MAX=8
+CONFIG_RT_NAME_MAX=16
 # CONFIG_RT_USING_ARCH_DATA_TYPE is not set
 # CONFIG_RT_USING_SMART is not set
 # CONFIG_RT_USING_NANO is not set
@@ -124,10 +124,54 @@ CONFIG_FINSH_USING_OPTION_COMPLETION=y
 #
 # DFS: device virtual file system
 #
-# CONFIG_RT_USING_DFS is not set
+CONFIG_RT_USING_DFS=y
+CONFIG_DFS_USING_POSIX=y
+CONFIG_DFS_USING_WORKDIR=y
+# CONFIG_RT_USING_DFS_MNTTABLE is not set
+CONFIG_DFS_FD_MAX=16
+CONFIG_RT_USING_DFS_V1=y
+# CONFIG_RT_USING_DFS_V2 is not set
+CONFIG_DFS_FILESYSTEMS_MAX=4
+CONFIG_DFS_FILESYSTEM_TYPES_MAX=4
+CONFIG_RT_USING_DFS_ELMFAT=y
+
+#
+# elm-chan's FatFs, Generic FAT Filesystem Module
+#
+CONFIG_RT_DFS_ELM_CODE_PAGE=437
+CONFIG_RT_DFS_ELM_WORD_ACCESS=y
+# CONFIG_RT_DFS_ELM_USE_LFN_0 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_1 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_2 is not set
+CONFIG_RT_DFS_ELM_USE_LFN_3=y
+CONFIG_RT_DFS_ELM_USE_LFN=3
+CONFIG_RT_DFS_ELM_LFN_UNICODE_0=y
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_1 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_2 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_3 is not set
+CONFIG_RT_DFS_ELM_LFN_UNICODE=0
+CONFIG_RT_DFS_ELM_MAX_LFN=255
+CONFIG_RT_DFS_ELM_DRIVES=1
+CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=4096
+# CONFIG_RT_DFS_ELM_USE_ERASE is not set
+CONFIG_RT_DFS_ELM_REENTRANT=y
+CONFIG_RT_DFS_ELM_MUTEX_TIMEOUT=3000
+# CONFIG_RT_DFS_ELM_USE_EXFAT is not set
+# end of elm-chan's FatFs, Generic FAT Filesystem Module
+
+CONFIG_RT_USING_DFS_DEVFS=y
+# CONFIG_RT_USING_DFS_ROMFS is not set
+# CONFIG_RT_USING_DFS_CROMFS is not set
+# CONFIG_RT_USING_DFS_RAMFS is not set
+# CONFIG_RT_USING_DFS_TMPFS is not set
+# CONFIG_RT_USING_DFS_MQUEUE is not set
 # end of DFS: device virtual file system
 
-# CONFIG_RT_USING_FAL is not set
+CONFIG_RT_USING_FAL=y
+CONFIG_FAL_DEBUG_CONFIG=y
+CONFIG_FAL_DEBUG=1
+CONFIG_FAL_PART_HAS_TABLE_CFG=y
+# CONFIG_FAL_USING_SFUD_PORT is not set
 
 #
 # Device Drivers
@@ -160,9 +204,9 @@ CONFIG_RT_USING_RANDOM=y
 CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_PULSE_ENCODER is not set
 # CONFIG_RT_USING_INPUT_CAPTURE is not set
-# CONFIG_RT_USING_MTD_NOR is not set
+CONFIG_RT_USING_MTD_NOR=y
 CONFIG_RT_USING_MTD_NAND=y
-CONFIG_RT_MTD_NAND_DEBUG=y
+# CONFIG_RT_MTD_NAND_DEBUG is not set
 # CONFIG_RT_USING_PM is not set
 CONFIG_RT_USING_RTC=y
 CONFIG_RT_USING_ALARM=y
@@ -223,7 +267,7 @@ CONFIG_RT_USING_PIN=y
 #
 # CONFIG_RT_LIBC_USING_FULL_TZ_DST is not set
 CONFIG_RT_LIBC_USING_LIGHT_TZ_DST=y
-CONFIG_RT_LIBC_TZ_DEFAULT_HOUR=8
+CONFIG_RT_LIBC_TZ_DEFAULT_HOUR=0
 CONFIG_RT_LIBC_TZ_DEFAULT_MIN=0
 CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # end of Timezone and Daylight Saving Time
@@ -252,10 +296,7 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # end of Interprocess Communication (IPC)
 # end of POSIX (Portable Operating System Interface) layer
 
-CONFIG_RT_USING_CPLUSPLUS=y
-# CONFIG_RT_USING_CPLUSPLUS11 is not set
-# CONFIG_RT_USING_CPP_WRAPPER is not set
-# CONFIG_RT_USING_CPP_EXCEPTIONS is not set
+# CONFIG_RT_USING_CPLUSPLUS is not set
 # end of C/C++ and POSIX layer
 
 #
@@ -1239,10 +1280,7 @@ CONFIG_BOARD_SERIES_STM32_NUCLEO_64=y
 #
 # Onboard Peripheral Drivers
 #
-# CONFIG_BSP_USING_ARDUINO is not set
-# CONFIG_BSP_USING_KEY is not set
-# CONFIG_BSP_USING_MPU6XXX is not set
-# CONFIG_BSP_USING_SPI_FLASH is not set
+CONFIG_BSP_USING_NAND_FLASH=y
 # end of Onboard Peripheral Drivers
 
 #
@@ -1277,13 +1315,15 @@ CONFIG_BSP_USING_CRC=y
 # CONFIG_BSP_USING_RNG is not set
 # CONFIG_BSP_USING_HASH is not set
 # CONFIG_BSP_USING_CRYP is not set
-# CONFIG_BSP_USING_ON_CHIP_FLASH is not set
+CONFIG_BSP_USING_ON_CHIP_FLASH=y
 # CONFIG_BSP_USING_UDID is not set
 # end of On-chip Peripheral Drivers
 
 #
 # Board extended module Drivers
 #
+CONFIG_BSP_USING_DHARA=y
+# end of Board extended module Drivers
 # end of Hardware Drivers Config
 
 #
@@ -1296,7 +1336,7 @@ CONFIG_BSP_USING_CRC=y
 CONFIG_APP_USING_LOG=y
 CONFIG_APP_LOG_PRINT_CHANNEL=y
 CONFIG_APP_LOG_PRINT_TO_UART=y
-CONFIG_APP_LOG_PRINT_TO_FILE=y
+# CONFIG_APP_LOG_PRINT_TO_FILE is not set
 CONFIG_APP_LOG_LEVEL=y
 CONFIG_APP_LOG_LEVEL_DBG=y
 CONFIG_APP_LOG_LEVEL_INF=y
