--- a/bsp/stm32/encortec/bootloader/board/SConscript
+++ b/bsp/stm32/encortec/bootloader/board/SConscript
@@ -12,18 +12,18 @@ board.c
 CubeMX_Config/Src/stm32u5xx_hal_msp.c
 ''')
 
-# if GetDepend(['BSP_USING_KEY']):
-#     src += Glob('ports/drv_key.c')
-
-# if GetDepend(['BSP_USING_SPI_FLASH']):
-#     src += Glob('ports/drv_spi_flash.c')
-
-path =  [cwd]
+path = [cwd]
 path += [cwd + '/CubeMX_Config/Inc']
 
-if GetDepend(['RT_USING_MTD_NAND']):
-    src += Split('drivers/nandflash/nandflash_as5f38.c')
-    path += [cwd + '/drivers/nandflash']
+# if GetDepend(['RT_USING_MTD_NAND']):
+#     src += Split('drivers/nandflash/nandflash_as5f38.c')
+#     path += [cwd + '/drivers/nandflash']
+
+if GetDepend(["BSP_USING_NAND_FLASH", "BSP_USING_DHARA"]):
+    src += Glob("drivers/fatfs_nand_flash/*.c")
+    src += Glob("drivers/hal_spi_nand_driver/*.c")
+    path += [cwd + '/drivers/fatfs_nand_flash']
+    path += [cwd + '/drivers/hal_spi_nand_driver']
 
 startup_path_prefix = SDK_LIB
 
