--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,12 @@
         "dhara_blk_device.h": "c",
         "board.h": "c",
         "math.h": "c",
-        "*.tcc": "c"
+        "*.tcc": "c",
+        "cstdio": "c",
+        "dirent.h": "c",
+        "stdio.h": "c",
+        "logging.h": "c",
+        "stat.h": "c",
+        "ctime": "c"
     }
 }
