update: stm32u575 adaptation

--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -1271,7 +1271,6 @@ CONFIG_PKG_LWGPS_VER="latest"
 
 CONFIG_SOC_FAMILY_STM32=y
 CONFIG_SOC_SERIES_STM32U5=y
-CONFIG_BOARD_SERIES_STM32_NUCLEO_64=y
 
 #
 # Hardware Drivers Config
@@ -1295,6 +1294,7 @@ CONFIG_BSP_USING_UART5=y
 CONFIG_BSP_USING_LPUART1=y
 CONFIG_BSP_USING_ADC=y
 CONFIG_BSP_USING_ADC1=y
+CONFIG_BSP_USING_VERFBUF=y
 # CONFIG_BSP_USING_PWM is not set
 CONFIG_BSP_USING_SPI=y
 CONFIG_BSP_USING_SPI1=y
@@ -1350,8 +1350,7 @@ CONFIG_APP_LOG_BUF_SIZE=512
 # STM32 Platform
 #
 # CONFIG_SOC_STM32U545RE is not set
-# CONFIG_BOARD_STM32U545_NUCLEO is not set
-CONFIG_SOC_STM32U535VE=y
-CONFIG_BOARD_STM32U535_NUCLEO=y
+# CONFIG_SOC_STM32U535VE is not set
+CONFIG_SOC_STM32U575VI=y
 # end of STM32 Platform
 # end of Encortec Application Config
