update cloud TSL Model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,9 @@
         "drv_nand_flash.h": "c",
         "voltage.h": "c",
         "tmp116.h": "c",
-        "control.h": "c"
+        "control.h": "c",
+        "stdlib.h": "c",
+        "string.h": "c",
+        "lpm.h": "c"
     }
 }
