--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
         "drv_nand_flash.h": "c",
         "voltage.h": "c",
         "tmp116.h": "c",
-        "control.h": "c"
+        "control.h": "c",
+        "stm32u5xx_hal_hash.h": "c"
     }
 }
