--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -1313,7 +1313,7 @@ CONFIG_BSP_USING_ONCHIP_RTC=y
 CONFIG_BSP_RTC_USING_LSE=y
 CONFIG_BSP_USING_CRC=y
 # CONFIG_BSP_USING_RNG is not set
-# CONFIG_BSP_USING_HASH is not set
+CONFIG_BSP_USING_HASH=y
 # CONFIG_BSP_USING_CRYP is not set
 CONFIG_BSP_USING_ON_CHIP_FLASH=y
 # CONFIG_BSP_USING_UDID is not set
