--- a/bsp/stm32/libraries/STM32U5xx_HAL/SConscript
+++ b/bsp/stm32/libraries/STM32U5xx_HAL/SConscript
@@ -114,6 +114,10 @@ if GetDepend(['BSP_USING_SRAM']):
 if GetDepend(['RT_USING_MTD_NAND']):
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_ll_dlyb.c']
 
+if GetDepend(['BSP_USING_HASH']):
+    src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_hash_ex.c']
+    src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_hash.c']
+
 path = [cwd + '/STM32U5xx_HAL_Driver/Inc',
     cwd + '/CMSIS/Device/ST/STM32U5xx/Include']
 
