Squashed commit of the following:
commit de59de43019ee5eeff102d60e3c433f012dc3aa0
Author: dustin <dustin.wei@quectel.com>
Date:   Sun Oct 13 17:14:08 2024 +0800

    add esp32 wifi transfer data business

commit 48957e6fe385f183105199e4925397e0011be429
Merge: fb9bdaf53 0fb54b3b0
Author: dustin <dustin.wei@quectel.com>
Date:   Sun Oct 13 15:10:40 2024 +0800

    fix merge conflix

commit fb9bdaf533c275c9b10e74666b2e28db5061255e
Author: dustin <dustin.wei@quectel.com>
Date:   Sun Oct 13 15:04:11 2024 +0800

    update: esp32 transfer functions

commit 0fb54b3b069b09b1b3a32403a50527fea30b150e
Merge: 4c86b55cb ebd1d0fdd
Author: Felix Ye(叶剑) <felix.ye@QUECTEL.COM>
Date:   Sat Oct 12 18:46:32 2024 +0800

    Merge branch 'encortec-dev-emc' of https://github.com/QuecPython/rt-thread into encortec-dev-emc

commit 4c86b55cb360be839eae31e89e2c499b9110f315
Author: Felix Ye(叶剑) <felix.ye@QUECTEL.COM>
Date:   Sat Oct 12 18:44:47 2024 +0800

    add esp32 data transf function

commit ebd1d0fdd40f2b152bcb01e8de9c5a0fec906478
Author: JhosuaSparrow <790041973@qq.com>
Date:   Sat Oct 12 15:30:38 2024 +0800

    update: gnss log.

commit 07db944b61db772e0979796f1cd7a3647b9209ff
Author: JhosuaSparrow <790041973@qq.com>
Date:   Sat Oct 12 15:18:47 2024 +0800

    update: gnss power off log.

commit 2559ad7763d2a4c942f3b169a4a4919092191efa
Author: JhosuaSparrow <790041973@qq.com>
Date:   Sat Oct 12 14:14:21 2024 +0800

    update: gnss log

commit 056f287b3faa27bbc6b2e792b8d290d1f44c6123
Author: JhosuaSparrow <790041973@qq.com>
Date:   Thu Oct 10 17:12:01 2024 +0800

    update: voltage.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "stdlib.h": "c",
         "string.h": "c",
         "lpm.h": "c",
-        "cjson.h": "c"
+        "cjson.h": "c",
+        "esp32.h": "c"
     }
 }
