--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -309,7 +309,7 @@ CONFIG_RT_USING_AT=y
 # CONFIG_AT_DEBUG is not set
 # CONFIG_AT_USING_SERVER is not set
 CONFIG_AT_USING_CLIENT=y
-CONFIG_AT_CLIENT_NUM_MAX=2
+CONFIG_AT_CLIENT_NUM_MAX=4
 # CONFIG_AT_USING_SOCKET is not set
 CONFIG_AT_USING_CLI=y
 CONFIG_AT_PRINT_RAW_CMD=y
@@ -1295,6 +1295,7 @@ CONFIG_BSP_USING_UART5=y
 CONFIG_BSP_USING_LPUART1=y
 CONFIG_BSP_USING_ADC=y
 CONFIG_BSP_USING_ADC1=y
+# CONFIG_BSP_USING_VERFBUF is not set
 # CONFIG_BSP_USING_PWM is not set
 CONFIG_BSP_USING_SPI=y
 CONFIG_BSP_USING_SPI1=y
