--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "voltage.h": "c",
         "tmp116.h": "c",
         "control.h": "c",
-        "stm32u5xx_hal_hash.h": "c"
+        "stm32u5xx_hal_hash.h": "c",
+        "drv_usart_v2.h": "c"
     }
 }
