--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,8 @@
     "configurations": [
         {
             "cwd": "${workspaceRoot}",
-            "executable": "${workspaceFolder}/bsp/stm32/encortec/application/build/encortec-application.elf",
+            // "executable": "${workspaceFolder}/bsp/stm32/encortec/application/build/encortec-application.elf",
+            "executable": "${workspaceFolder}/bsp/stm32/encortec/bootloader/encortec-bootloader.elf",
             "name": "Debug with J-Link",
             "request": "launch",
             "type": "cortex-debug",
