update: adxl372 fifo collection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
         "control.h": "c",
         "stm32u5xx_hal_hash.h": "c",
         "drv_usart_v2.h": "c",
-        "ota_app.h": "c"
+        "ota_app.h": "c",
+        "string": "c"
     }
 }
