update: adxl372 fifo

--- a/bsp/stm32/encortec/bootloader/board/Kconfig
+++ b/bsp/stm32/encortec/bootloader/board/Kconfig
@@ -54,7 +54,7 @@ menu "On-chip Peripheral Drivers"
     menuconfig BSP_USING_ADC
         bool "Enable ADC"
         default n
-        select RT_USING_ADC
+        # select RT_USING_ADC
         if BSP_USING_ADC
             config BSP_USING_ADC1
                 bool "Enable ADC1"
