--- a/bsp/stm32/libraries/STM32U5xx_HAL/SConscript
+++ b/bsp/stm32/libraries/STM32U5xx_HAL/SConscript
@@ -60,7 +60,7 @@ if GetDepend(['RT_USING_ADC']):
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_adc.c']
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_adc_ex.c']
 
-if GetDepend(['RT_USING_DAC']):
+if GetDepend(['BSP_USING_ADC']):
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_dac.c']
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_dac_ex.c']
 
