--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -1294,7 +1294,7 @@ CONFIG_BSP_USING_UART5=y
 CONFIG_BSP_USING_LPUART1=y
 CONFIG_BSP_USING_ADC=y
 CONFIG_BSP_USING_ADC1=y
-CONFIG_BSP_USING_VERFBUF=y
+# CONFIG_BSP_USING_VERFBUF is not set
 # CONFIG_BSP_USING_PWM is not set
 CONFIG_BSP_USING_SPI=y
 CONFIG_BSP_USING_SPI1=y
