--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,8 @@
         "tmp116.h": "c",
         "control.h": "c",
         "stm32u5xx_hal_hash.h": "c",
-        "drv_usart_v2.h": "c"
+        "drv_usart_v2.h": "c",
+        "string.h": "c",
+        "at_client_https.h": "c"
     }
 }
