update: adc dma

--- a/bsp/stm32/encortec/.config
+++ b/bsp/stm32/encortec/.config
@@ -196,7 +196,7 @@ CONFIG_RT_USING_I2C_BITOPS=y
 # CONFIG_RT_I2C_BITOPS_DEBUG is not set
 # CONFIG_RT_USING_SOFT_I2C is not set
 # CONFIG_RT_USING_PHY is not set
-CONFIG_RT_USING_ADC=y
+# CONFIG_RT_USING_ADC is not set
 # CONFIG_RT_USING_DAC is not set
 # CONFIG_RT_USING_NULL is not set
 # CONFIG_RT_USING_ZERO is not set
@@ -1293,7 +1293,7 @@ CONFIG_BSP_USING_UART4=y
 CONFIG_BSP_USING_UART5=y
 CONFIG_BSP_USING_LPUART1=y
 CONFIG_BSP_USING_ADC=y
-CONFIG_BSP_USING_ADC1=y
+# CONFIG_BSP_USING_ADC1 is not set
 # CONFIG_BSP_USING_VERFBUF is not set
 # CONFIG_BSP_USING_PWM is not set
 CONFIG_BSP_USING_SPI=y
