--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,8 @@
         "stm32u5xx_hal_hash.h": "c",
         "drv_usart_v2.h": "c",
         "ota_app.h": "c",
-        "string": "c"
+        "string": "c",
+        "stm32u5xx_hal.h": "c",
+        "stm32u5xx_hal_conf.h": "c"
     }
 }
