--- a/bsp/stm32/encortec/bootloader/board/SConscript
+++ b/bsp/stm32/encortec/bootloader/board/SConscript
@@ -28,6 +28,9 @@ if GetDepend(["BSP_USING_NAND_FLASH", "BSP_USING_DHARA"]):
 src += Glob("drivers/ota_app/*.c")
 path += [cwd + '/drivers/ota_app']
 
+src += Glob("drivers/adc_dma/*.c")
+path += [cwd + '/drivers/adc_dma']
+
 startup_path_prefix = SDK_LIB
 
 if rtconfig.PLATFORM in ['gcc']:
