--- a/bsp/stm32/libraries/STM32U5xx_HAL/SConscript
+++ b/bsp/stm32/libraries/STM32U5xx_HAL/SConscript
@@ -56,7 +56,7 @@ if GetDepend(['RT_USING_HWTIMER']) or GetDepend(['RT_USING_PWM']):
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_tim.c']
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_tim_ex.c']
 
-if GetDepend(['RT_USING_ADC']):
+if GetDepend(['BSP_USING_ADC']):
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_adc.c']
     src += ['STM32U5xx_HAL_Driver/Src/stm32u5xx_hal_adc_ex.c']
 
