--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "stm32u5xx_hal.h": "c",
         "stm32u5xx_hal_conf.h": "c",
         "upgrade_manager.h": "c",
-        "drv_fatfs_dhara_nand.h": "c"
+        "drv_fatfs_dhara_nand.h": "c",
+        "stdlib.h": "c"
     }
 }
