--- a/bsp/stm32/encortec/application/SConstruct
+++ b/bsp/stm32/encortec/application/SConstruct
@@ -163,7 +163,7 @@ driver_c_files = [
     "board/driver/gnss/ota/src/hdl_brom_base.c",
     "board/driver/gnss/ota/src/hdl_channel.c",
     "board/driver/gnss/ota/src/hdl_da_cmd.c",
-    "board/driver/gnss/ota/src/hdl_demo.c",
+    # "board/driver/gnss/ota/src/hdl_demo.c",
     "board/driver/hdc3021/hdc3021.c",
     "board/driver/lpm/lpm.c",
     "board/driver/tmp116/tmp116.c",
@@ -179,6 +179,7 @@ driver_c_files = [
     "board/driver/esp32/at_data_transf.c",
     "board/driver/drv_hash/drv_hash.c",
     "board/driver/ota/ota_cat1.c",
+    "board/driver/ota/ota_gnss.c",
     "board/driver/ota/ota_esp32.c",
     "board/driver/ota/ota_stm32u575.c",
     "board/driver/ota/upgrade_manager.c",
