--- a/bsp/stm32/encortec/application/SConstruct
+++ b/bsp/stm32/encortec/application/SConstruct
@@ -180,6 +180,7 @@ driver_c_files = [
     "board/driver/drv_hash/drv_hash.c",
     "board/driver/ota/ota_cat1.c",
     "board/driver/ota/ota_gnss.c",
+    "board/driver/ota/ota_nb.c",
     "board/driver/ota/ota_esp32.c",
     "board/driver/ota/ota_stm32u575.c",
     "board/driver/ota/upgrade_manager.c",
